# tracel-client

./: Cargo.toml  README.md
.github/workflows/: auto-release.yml  publish.yml
burn-central-client/src/: client.rs
burn-central-client/src/experiment/: websocket.rs
tracel-client/: Cargo.toml
tracel-client/src/: client.rs  credentials.rs  error.rs  lib.rs  transport.rs  websocket.rs
tracel-client/src/artifact/: mod.rs  request.rs  response.rs
tracel-client/src/experiment/: mod.rs  request.rs  response.rs  websocket.rs
tracel-client/src/fleet/: mod.rs  request.rs  response.rs
tracel-client/src/inference/: mod.rs  request.rs  response.rs
tracel-client/src/job/: mod.rs  request.rs
tracel-client/src/model/: mod.rs  request.rs  response.rs
tracel-client/src/project/: mod.rs  request.rs  response.rs
tracel-client/src/station/: mod.rs  system.rs
tracel-client/src/station/annotation/: mod.rs  request.rs  response.rs
tracel-client/src/station/dataset/: mod.rs  request.rs  response.rs
tracel-client/src/station/experiment/: mod.rs  request.rs  response.rs
tracel-client/src/station/model/: mod.rs  request.rs  response.rs
tracel-client/src/user/: mod.rs  response.rs
xtask/: Cargo.toml
