[workspace]
# Use resolver version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["tracel-client", "xtask"]

[workspace.package]
edition = "2024"
version = "0.7.0"
authors = ["Tracel team"]
homepage = "https://burn.dev"
repository = "https://github.com/tracel-ai/burn-central-client"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_with = { version = "3.16.0", features = ["base64", "macros"] }
uuid = { version = "1.20.0" }
thiserror = { version = "2.0.18" }
strum = { version = "0.27.2", features = ["derive"] }
tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = { version = "0.1" }

[profile.dev]
debug = 0
