[package]
name = "tracel-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Collection of HTTP calls required to communicate with the Tracel backend"
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ["tracel", "station"]
tracel = []
station = []

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
uuid.workspace = true
serde_json.workspace = true
thiserror.workspace = true
strum.workspace = true
tungstenite.workspace = true
tracing.workspace = true
rustls.workspace = true
